force-app/main/default/objects/Class_Enrollment__c/Class_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Connector object that associates a Student to a Class.</description>
    <label>Class Enrollment</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>