force-app/main/default/objects/Class_Enrollment__c/fields/Attending_Week_2__c.field-meta.xml
<CustomField>
    <fullName>Attending_Week_2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Attending: Week 2</label>
    <type>Checkbox</type>
</CustomField>