force-app/main/default/objects/Class_Enrollment__c/fields/Attending_Week_3__c.field-meta.xml
<CustomField>
    <fullName>Attending_Week_3__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Attending: Week 3</label>
    <type>Checkbox</type>
</CustomField>