force-app/main/default/objects/Class_Enrollment__c/fields/Certificate_Issued__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use to indicate if a certificate has been issued</inlineHelpText>
    <label>Certificate Issued</label>
    <type>Checkbox</type>
</CustomField>