force-app/main/default/objects/Class_Enrollment__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>