force-app/main/default/objects/Class_Enrollment__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use to identify type of class</inlineHelpText>
    <label>Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Class Enrollments</relationshipLabel>
    <relationshipName>R00N40000001QAyfEAG</relationshipName>
    <type>Lookup</type>
</CustomField>