force-app/main/default/objects/Class_Enrollment__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yellow Belt</fullName>
            </value>
            <value>
                <fullName>Green Belt</fullName>
            </value>
            <value>
                <fullName>Black Belt</fullName>
            </value>
            <value>
                <fullName>Master Black Belt</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>