force-app/main/default/objects/Class_Enrollment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;  Contact__r.AccountId ,  Contact__r.Account_Name__c)</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>