force-app/main/default/objects/Class_Enrollment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Student Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N40000001QAygEAG</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>