force-app/main/default/objects/Class_Enrollment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <formula>Class__r.Product2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to identify the title of the course taken</inlineHelpText>
    <label>Course</label>
    <type>Text</type>
</CustomField>