force-app/main/default/objects/Class_Enrollment__c/fields/Date_Offered__c.field-meta.xml
<CustomField>
    <fullName>Date_Offered__c</fullName>
    <formula>Class__r.Date_Offered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to identifify when the course is offered</inlineHelpText>
    <label>Date Offered</label>
    <type>Date</type>
</CustomField>