force-app/main/default/objects/Class_Enrollment__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <formula>TEXT(Class__r.Facility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to identify the facility where student was trained</inlineHelpText>
    <label>Facility</label>
    <type>Text</type>
</CustomField>