force-app/main/default/objects/Class_Enrollment__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>75</length>
    <type>Text</type>
</CustomField>