force-app/main/default/objects/Class_Enrollment__c/fields/Plaque_Issued__c.field-meta.xml
<CustomField>
    <fullName>Plaque_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use to identify if a plaque has been issued</inlineHelpText>
    <label>Plaque Issued</label>
    <type>Checkbox</type>
</CustomField>