force-app/main/default/objects/Class_Enrollment__c/fields/Source_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Source_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Attendee</label>
    <referenceTo>Training_Attendee__c</referenceTo>
    <relationshipLabel>Class Enrollments</relationshipLabel>
    <relationshipName>Class_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>