force-app/main/default/objects/Class_Enrollment__c/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Class Enrollments</relationshipLabel>
    <relationshipName>Source_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>