force-app/main/default/objects/Class_Enrollment__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <inlineHelpText>Use to identify the date the student was tested</inlineHelpText>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>