force-app/main/default/objects/Class_Enrollment__c/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <inlineHelpText>Enter the score or test results here</inlineHelpText>
    <label>Test Result</label>
    <length>99</length>
    <type>Text</type>
</CustomField>