force-app/main/default/objects/Class_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contact__c</columns>
    <columns>Class__c</columns>
    <columns>Status__c</columns>
    <columns>Facility__c</columns>
    <columns>Date_Offered__c</columns>
    <columns>Course__c</columns>
    <columns>Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>