force-app/main/default/objects/Class_Enrollment__c/listViews/Registered.listView-meta.xml
<ListView>
    <fullName>Registered</fullName>
    <columns>Contact__c</columns>
    <columns>Class__c</columns>
    <columns>Status__c</columns>
    <columns>Facility__c</columns>
    <columns>Date_Offered__c</columns>
    <columns>Course__c</columns>
    <columns>Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </filters>
    <label>Registered</label>
</ListView>